<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.intervals.IntervalsFragment">

    <Button
        android:id="@+id/m2Btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:tag="1"
        android:text="@string/m2"
        app:layout_constraintBottom_toTopOf="@+id/m3Btn"
        app:layout_constraintEnd_toStartOf="@+id/M2Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn" />

    <Button
        android:id="@+id/p5Btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:tag="7"
        android:text="@string/p5"
        app:layout_constraintBottom_toTopOf="@+id/M6Btn"
        app:layout_constraintEnd_toStartOf="@+id/m6Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p4Btn" />

    <Button
        android:id="@+id/m3Btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:tag="3"
        android:text="@string/m3"
        app:layout_constraintBottom_toTopOf="@+id/p4Btn"
        app:layout_constraintEnd_toStartOf="@+id/M3Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m2Btn" />

    <Button
        android:id="@+id/p4Btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:tag="5"
        android:text="@string/p4"
        app:layout_constraintBottom_toTopOf="@+id/p5Btn"
        app:layout_constraintEnd_toStartOf="@+id/triBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m3Btn" />

    <Button
        android:id="@+id/M7Btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:tag="11"
        android:text="@string/M7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/p8Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/M6Btn" />

    <Button
        android:id="@+id/M6Btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:tag="9"
        android:text="@string/M6"
        app:layout_constraintBottom_toTopOf="@+id/M7Btn"
        app:layout_constraintEnd_toStartOf="@+id/m7Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p5Btn" />

    <TextView
        android:id="@+id/intervals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_intervaltest"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intervals" />

    <Button
        android:id="@+id/M2Btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:tag="2"
        android:text="@string/M2"
        app:layout_constraintBottom_toTopOf="@+id/M3Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/m2Btn"
        app:layout_constraintTop_toBottomOf="@+id/playBtn" />

    <Button
        android:id="@+id/p8Btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:tag="12"
        android:text="@string/p8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/M7Btn"
        app:layout_constraintTop_toBottomOf="@+id/m7Btn" />

    <Button
        android:id="@+id/triBtn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:tag="6"
        android:text="@string/tri"
        app:layout_constraintBottom_toTopOf="@+id/m6Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/p4Btn"
        app:layout_constraintTop_toBottomOf="@+id/M3Btn" />

    <Button
        android:id="@+id/m6Btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:tag="8"
        android:text="@string/m6"
        app:layout_constraintBottom_toTopOf="@+id/m7Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/p5Btn"
        app:layout_constraintTop_toBottomOf="@+id/triBtn" />

    <Button
        android:id="@+id/M3Btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:tag="4"
        android:text="@string/M3"
        app:layout_constraintBottom_toTopOf="@+id/triBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/m3Btn"
        app:layout_constraintTop_toBottomOf="@+id/M2Btn" />

    <Button
        android:id="@+id/m7Btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:tag="10"
        android:text="@string/m7"
        app:layout_constraintBottom_toTopOf="@+id/p8Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/M6Btn"
        app:layout_constraintTop_toBottomOf="@+id/m6Btn" />

    <Button
        android:id="@+id/replayBtn"
        android:layout_width="87dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:text="@string/Replay"
        app:layout_constraintBottom_toBottomOf="@+id/playBtn"
        app:layout_constraintStart_toEndOf="@+id/playBtn" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/count"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/playBtn"
        app:layout_constraintTop_toBottomOf="@+id/intervals" />

</androidx.constraintlayout.widget.ConstraintLayout>