<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.chordprogs.ChordProgsFragment">

    <Button
        android:id="@+id/diminished"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:tag="3"
        android:text="@string/IV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/augmented"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/major" />

    <TextView
        android:id="@+id/intervals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_chordprogstest"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intervals" />

    <Button
        android:id="@+id/minor"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:tag="2"
        android:text="@string/IIV"
        app:layout_constraintBottom_toTopOf="@+id/augmented"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/major"
        app:layout_constraintTop_toBottomOf="@+id/playBtn" />

    <Button
        android:id="@+id/augmented"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:tag="4"
        android:text="@string/Iiv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/diminished"
        app:layout_constraintTop_toBottomOf="@+id/minor" />

    <Button
        android:id="@+id/replayBtn"
        android:layout_width="87dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:text="@string/Replay"
        app:layout_constraintBottom_toBottomOf="@+id/playBtn"
        app:layout_constraintStart_toEndOf="@+id/playBtn" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/count"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/playBtn"
        app:layout_constraintTop_toBottomOf="@+id/intervals" />

    <Button
        android:id="@+id/major"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/Iii"
        app:layout_constraintBottom_toTopOf="@+id/diminished"
        app:layout_constraintEnd_toStartOf="@+id/minor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>